--- a/client/src/components/AppTableData/MyTableData.module.scss
+++ b/client/src/components/AppTableData/MyTableData.module.scss
@@ -6,14 +6,15 @@
     position: relative;
     top: calc(((100vw - 320px) / 18));
     width: calc(100vw - 50 * ((100vw - 320px) / 100));
-
+    height: min-content;
+    
     @media (max-width: 769px) {
         top: 0;
         width: 100vw;
         padding: 5px;
     }
 
-    margin: auto;
+    margin: 0 auto;
 
     display: flex;
     flex-direction: column;
@@ -32,6 +33,10 @@
             width: 100vw;
             padding: 5px;
         }
+    }
+
+    .loader {
+        position: relative;
     }
 
     .select__date {
@@ -93,8 +98,11 @@
                     gap: 10px;
                     padding: 12px 16px;
                     align-items: center;
-
+                    &:not(:last-child) {
+                        border-right: 1px solid var(--color-black-5);
+                    }
                     @media (max-width: 769px) {
+                        
                         &.manager {
                             grid-template-rows: 90% 10%;
                         }
@@ -112,9 +120,12 @@
                     .add-icon {
                         align-self: center;
                         position: relative;
+                        right: 5px;
                         width: 14px;
                         height: 14px;
                         @media (max-width: 769px) {
+                            inset: auto;
+
                             &.manager {
                                 margin: 0 auto;
                             }
